# ChangeLog for dev-php5/pecl-fileinfo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-fileinfo/Attic/ChangeLog,v 1.32 2010/11/09 13:25:32 jer Exp $

  09 Nov 2010; Jeroen Roovers <jer@gentoo.org>
  pecl-fileinfo-1.0.4-r2.ebuild:
  Marked ~hppa (bug #344093).

  04 Nov 2010; Matti Bickel <mabi@gentoo.org> pecl-fileinfo-1.0.4-r2.ebuild:
  fix USE_PHP placement

*pecl-fileinfo-1.0.4-r2 (04 Nov 2010)

  04 Nov 2010; Matti Bickel <mabi@gentoo.org>
  +pecl-fileinfo-1.0.4-r2.ebuild:
  add version that supports minor version slotting

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> pecl-fileinfo-1.0.4-r1.ebuild:
  amd64 stable, bug 288043

  19 Jan 2010; nixnut <nixnut@gentoo.org> pecl-fileinfo-1.0.4-r1.ebuild:
  ppc stable #288043

  05 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  pecl-fileinfo-1.0.4-r1.ebuild:
  Stable for HPPA (bug #288043).

  02 Jan 2010; Brent Baude <ranger@gentoo.org>
  pecl-fileinfo-1.0.4-r1.ebuild:
  Marking pecl-fileinfo-1.0.4-r1 ppc64 for bug 288043

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  pecl-fileinfo-1.0.4-r1.ebuild:
  sparc stable wrt #288043

  16 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  pecl-fileinfo-1.0.4-r1.ebuild:
  stable x86, bug 288043

*pecl-fileinfo-1.0.4-r1 (16 Dec 2009)

  16 Dec 2009; Christian Hoffmann <hoffie@gentoo.org>
  +pecl-fileinfo-1.0.4-r1.ebuild,
  +files/fileinfo-1.0.4-file-5.0-compat.patch:
  adding -r1 for >=file-5 compatibility per bug 288043, thanks to Cyril
  Pascal <cyril.pascal_gentoobugs@m4x.org>

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
  LICENSE fix from project overlay

  03 Dec 2007; Jakub Moc <jakub@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
  Fix LICENSE

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -pecl-fileinfo-1.0.3.ebuild:
  Cleanup

  01 Jun 2007; nixnut <nixnut@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
  Stable on ppc wrt bug 176542
