@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX fileinfo-1.0.4-file-5.0-compat.patch 434 RMD160 2d18320b9a4bba730a4af6b1ddd58615034e96d5 SHA1 21512381bfed056594a83503855dc96bc5c4d0ab SHA256 6a5f21988924ca4292da904381707bc7982f275f073eefdc81ca32a347183482
 DIST Fileinfo-1.0.4.tgz 5835 RMD160 fedf7f72b1b2dca30f138ef31f507084d1392dbe SHA1 60a146cf58357ab59f42061d35c0aa4bff8fb170 SHA256 df35ee00fce6483c58b2f37dbded33831ba84fdae92829dbe03f7331bec0aa3f
 EBUILD pecl-fileinfo-1.0.4-r1.ebuild 691 RMD160 047101d4a37606fecdc97bab135ee68157dea4e4 SHA1 4b26997876ec89b2bae06e73daa2952b85ee78fe SHA256 0e07cd7ecdc4bec3ca270a26a13fe188a2587d2b86cbad6222f0e18ed9d72e81
-EBUILD pecl-fileinfo-1.0.4-r2.ebuild 736 RMD160 69063c2e65cdfa47799b0e8ff6a121912601fa8c SHA1 06f2a756bfbab07b09998e37957f2a2de76460f5 SHA256 546b46ddb78cc6314ff14cdddb79071eaa243adaf4011de880ef5ad36f4bd1b3
+EBUILD pecl-fileinfo-1.0.4-r2.ebuild 739 RMD160 82cc65fa5a42cced52529b57e1a4e9c39c52894a SHA1 39817b4e32053d1595a215c015fe8c69ba1abe79 SHA256 8f4068a28e41cfdcf4494d39401ace3a486d52ec8a913d1b38e46a47d683be49
 EBUILD pecl-fileinfo-1.0.4.ebuild 531 RMD160 5bfe6cc629a2b6b246d241dec26f24dc5a006285 SHA1 f0c74081cc72c71a5e742d3ddd7a1ef6639fc778 SHA256 28fb03f89aa7bb72aad385cf52f4133203cd30720dc438db29058fc47a52721d
-MISC ChangeLog 4165 RMD160 13459548bbe85c273e64bcca7747000763b46674 SHA1 c0c6da5eab9ef3d7dca001afc2e802dca43418b1 SHA256 eef3ec9313a7429f86adf8f85bd170956ad2c5044870c91b472f48c6bb24d7a0
+MISC ChangeLog 4289 RMD160 836dfef921f891ba46e3f11a58d39886f5a647f0 SHA1 a00ed7f00dd12971eae366594d437a6cc68a6f48 SHA256 775bf0091f11c08c792e2bcd6780bbdb6b41298ba862bc8549c421309a7bc44d
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk2p8tcACgkQmWq1bYTyC0P1hwEAmGKz6StXDxHVcBaZlW0RIpE4
+GbFF5o3O3dvcj+2VOHUA/0X9TKFSSqbq3xB1TKF/r+/pxFBeQUIbnP/gtd6g3nrC
+=8lCf
+-----END PGP SIGNATURE-----
