@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-fileinfo/Attic/pecl-fileinfo-1.0.4-r2.ebuild,v 1.3 2010/11/09 13:25:32 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-fileinfo/Attic/pecl-fileinfo-1.0.4-r2.ebuild,v 1.4 2011/04/16 19:49:38 angelos Exp $
 
 EAPI="3"
 
@@ -14,7 +14,7 @@ USE_PHP="php5-2"
 
 inherit php-ext-pecl-r2
 
-KEYWORDS="~amd64 ~hppa ~x86"
+KEYWORDS="amd64 ~hppa ~x86"
 
 DESCRIPTION="libmagic bindings for PHP."
 LICENSE="PHP-3"
