@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/pecl-fileinfo
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-fileinfo/Attic/ChangeLog,v 1.32 2010/11/09 13:25:32 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-fileinfo/Attic/ChangeLog,v 1.33 2011/04/16 19:49:38 angelos Exp $
+
+  16 Apr 2011; Christoph Mende <angelos@gentoo.org>
+  pecl-fileinfo-1.0.4-r2.ebuild:
+  Stable on amd64 wrt bug #363811
 
   09 Nov 2010; Jeroen Roovers <jer@gentoo.org>
   pecl-fileinfo-1.0.4-r2.ebuild:
